sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:19: error: not found: value j
        maxDist = getCouleurJoueur(i, j)-i;
                                      ^